force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>The &apos;Account Plan&apos; object in Salesforce is specifically designed for priority 1 and 2 customers, enabling account managers to create and manage strategic plans to enhance client relationships and drive sales growth. This object serves as a centralized hub for account managers to outline their strategies, set goals, and track progress towards increasing client satisfaction and revenue generation. By leveraging the &apos;Account Plan&apos; object, account managers can effectively prioritize their efforts, collaborate with team members, and align their actions with the organization&apos;s overall sales objectives.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plannen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>