force-app/main/default/objects/Account_Plan__c/fields/AccountNameForm__c.field-meta.xml
<CustomField>
    <fullName>AccountNameForm__c</fullName>
    <formula>AccountRef__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>