force-app/main/default/objects/Account_Plan__c/fields/AccountPlanOwnerRef__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanOwnerRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>