force-app/main/default/objects/Account_Plan__c/fields/ActiveForm__c.field-meta.xml
<CustomField>
    <fullName>ActiveForm__c</fullName>
    <formula>AND(
TODAY()&gt;=  StartDate__c  ,
TODAY()&lt;=  EndDate__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>