force-app/main/default/objects/Account_Plan__c/fields/ApprovalStatusPick__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatusPick__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
                <isActive>false</isActive>
                <label>Recalled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>