force-app/main/default/objects/Account_Plan__c/fields/BudgetForThisYear__c.field-meta.xml
<CustomField>
    <fullName>BudgetForThisYear__c</fullName>
    <inlineHelpText>What is the budget for this year?</inlineHelpText>
    <label>Budget For This Year</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>