force-app/main/default/objects/Account_Plan__c/fields/BudgetFromLastYear__c.field-meta.xml
<CustomField>
    <fullName>BudgetFromLastYear__c</fullName>
    <label>Budget From Last Year</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>