force-app/main/default/objects/Account_Plan__c/fields/BudgetFromTwoYearsAgo__c.field-meta.xml
<CustomField>
    <fullName>BudgetFromTwoYearsAgo__c</fullName>
    <label>Budget From Two Years Ago</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>