force-app/main/default/objects/Account_Plan__c/fields/BudgetUpcomingYear__c.field-meta.xml
<CustomField>
    <fullName>BudgetUpcomingYear__c</fullName>
    <description>The budget from the upcoming year.</description>
    <inlineHelpText>What is the budget for the upcoming year.</inlineHelpText>
    <label>Budget Upcoming Year</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>