force-app/main/default/objects/Account_Plan__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments regarding the budget.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>