force-app/main/default/objects/Account_Plan__c/fields/CustomerGoals__c.field-meta.xml
<CustomField>
    <fullName>CustomerGoals__c</fullName>
    <label>Customer Goals</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>