force-app/main/default/objects/Account_Plan__c/fields/FocusClientOwnerPick__c.field-meta.xml
<CustomField>
    <fullName>FocusClientOwnerPick__c</fullName>
    <description>This field is extracted from the owner of the accountplan. And based on this it will retrieve the value of the focus client from  the object &quot;Business Unit Specific Attributes&quot;.</description>
    <label>Focus Client Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FocusClient</valueSetName>
    </valueSet>
</CustomField>