force-app/main/default/objects/Account_Plan__c/fields/HeijmansStrategy__c.field-meta.xml
<CustomField>
    <fullName>HeijmansStrategy__c</fullName>
    <label>Heijmans Strategy</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>