force-app/main/default/objects/Account_Plan__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>