force-app/main/default/objects/Account_Plan__c/fields/OurGoals__c.field-meta.xml
<CustomField>
    <fullName>OurGoals__c</fullName>
    <label>Our Goals</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>