force-app/main/default/objects/Account_Plan__c/fields/PipelineTrig__c.field-meta.xml
<CustomField>
    <fullName>PipelineTrig__c</fullName>
    <label>Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>