force-app/main/default/objects/Account_Plan__c/fields/SalesTarget__c.field-meta.xml
<CustomField>
    <fullName>SalesTarget__c</fullName>
    <label>Sales Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>