force-app/main/default/objects/Account_Plan__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>