force-app/main/default/objects/Account_Plan__c/fields/TargetAchievedForm__c.field-meta.xml
<CustomField>
    <fullName>TargetAchievedForm__c</fullName>
    <description>This formula calculates the target achieved percentage based on the Won revenue from the opportunity divided by the set target.</description>
    <formula>IF (  SalesTarget__c  = 0, 0 , WonRevenueTrig__c / SalesTarget__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Achieved %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>