force-app/main/default/objects/Account_Plan__c/fields/WhereWeAddValue__c.field-meta.xml
<CustomField>
    <fullName>WhereWeAddValue__c</fullName>
    <label>Where We Add Value</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>