force-app/main/default/objects/Account_Plan__c/fields/WonRevenueTrig__c.field-meta.xml
<CustomField>
    <fullName>WonRevenueTrig__c</fullName>
    <label>Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>